diana_driver/DianaApi/include/DianaAPI.h

/*************************************** version 1.1***************************************/

DIANA_API int getDH(/*OUT[7]*/ double *aDH, /*OUT[7]*/ double *alphaDH, /*OUT[7]*/ double *dDH,
                    /*OUT[7]*/ double *thetaDH);
DIANA_API int getOriginalJointTorque(/*OUT[7]*/ double *torques);
DIANA_API int getJacobiMatrix(/*OUT[42]*/ double *matrix_jacobi);
/*************************************** version 1.2***************************************/

DIANA_API int resetDH();
/*************************************** version 1.3***************************************/

DIANA_API int runProgram(const char *programName);
DIANA_API int stopProgram(const char *programName);
DIANA_API int getVariableValue(const char *variableName, double &value);
DIANA_API int setVariableValue(const char *variableName, const double &value);
DIANA_API int isTaskRunning(const char *variableName);
DIANA_API int pauseProgram();
DIANA_API int resumeProgram();
DIANA_API int stopAllProgram();
DIANA_API int isAnyTaskRunning();
/*************************************** version 1.4***************************************/

DIANA_API int cleanErrorInfo();
DIANA_API int setCollisionLevel(int level);