diana_driver/DianaApi/bin/DianaApi.py


def getDH(aDH,alphaDH,dDH,thetaDH):
    arr_aDH = DIANA_DH_A()
    arr_aDH.values = (c_double*7)()
    arr_alphaDH = DIANA_DH_Alpha()
    arr_alphaDH.values = (c_double*7)()
    arr_dDH = DIANA_DH_D()
    arr_dDH.values = (c_double*7)()
    arr_thetaDH = DIANA_DH_Theta()
    arr_thetaDH.values = (c_double*7)()
    api_mod.getDH.restype = c_int
    api_mod.getDH.argtypes = [ POINTER(DIANA_DH_A), 
        POINTER(DIANA_DH_Alpha),POINTER(DIANA_DH_D), POINTER(DIANA_DH_Theta)]
    ret = api_mod.getDH(byref(arr_aDH),byref(arr_alphaDH),byref(arr_dDH),byref(arr_thetaDH))
    for index in range(0, len(aDH)):
       aDH[index] = arr_aDH.values[index]
    for index in range(0, len(alphaDH)):
       alphaDH[index] = arr_alphaDH.values[index]
    for index in range(0, len(dDH)):
       dDH[index] = arr_dDH.values[index]
    for index in range(0, len(thetaDH)):
       thetaDH[index] = arr_thetaDH.values[index]
    return message(ret)

def getOriginalJointTorque(torques):
    jointTorque = DIANA_JOINT_TORQUE()
    jointTorque.values = (c_double*7)()
    api_mod.getOriginalJointTorque.restype = c_int
    api_mod.getOriginalJointTorque.argtypes = [ POINTER(DIANA_JOINT_TORQUE)]
    ret = api_mod.getOriginalJointTorque(byref(jointTorque))
    for index in range(0, len(torques)):
       torques[index] = jointTorque.values[index]
    return message(ret)

def getJacobiMatrix(matrix_jacobi):
    jacobi_matrix = DIANA_JACOBI_MATRIX()
    jacobi_matrix.values = (c_double*42)()
    api_mod.getJacobiMatrix.restype = c_int
    api_mod.getJacobiMatrix.argtypes = [ POINTER(DIANA_JACOBI_MATRIX)]
    ret = api_mod.getJacobiMatrix(byref(jacobi_matrix))
    for index in range(0, len(matrix_jacobi)):
       matrix_jacobi[index] = jacobi_matrix.values[index]
    return message(ret)

###################### version 1.20#########################

def resetDH():
    api_mod.resetDH.restype = c_int
    ret = api_mod.resetDH()
    return message(ret)

###################### version 1.30#########################
def runProgram(name):
    api_mod.runProgram.argtypes = [c_char_p]
    api_mod.runProgram.restype = c_int
    ret = api_mod.runProgram(bytes(name, encoding = "utf-8"))
    return message(ret)

def stopProgram(name):
    api_mod.stopProgram.argtypes = [c_char_p]
    api_mod.stopProgram.restype = c_int
    ret = api_mod.stopProgram(bytes(name, encoding = "utf-8"))
    return message(ret)

def getVariableValue(name,value):
    api_mod.getVariableValue.argtypes = [c_char_p, POINTER(c_double)]
    api_mod.getVariableValue.restype = c_int
    ret = api_mod.getVariableValue(bytes(name, encoding = "utf-8"),byref(value))
    return message(ret)

def setVariableValue(name,value):
    api_mod.setVariableValue.argtypes = [c_char_p, c_double]
    api_mod.setVariableValue.restype = c_int
    ret = api_mod.setVariableValue(bytes(name, encoding = "utf-8"),value)
    return message(ret)

def isTaskRunning(name):
    api_mod.isTaskRunning.argtypes = [c_char_p]
    api_mod.isTaskRunning.restype = c_int
    ret = api_mod.isTaskRunning(bytes(name, encoding = "utf-8"))
    return message(ret)

def pauseProgram():
    api_mod.pauseProgram.restype = c_int
    ret = api_mod.pauseProgram()
    return message(ret)

def resumeProgram():
    api_mod.resumeProgram.restype = c_int
    ret = api_mod.resumeProgram()
    return message(ret)

def stopAllProgram():
    api_mod.stopAllProgram.restype = c_int
    ret = api_mod.stopAllProgram()
    return message(ret)

def isAnyTaskRunning():
    api_mod.isAnyTaskRunning.restype = c_int
    ret = api_mod.isAnyTaskRunning()
    return message(ret)

###################### version 1.40#########################

def cleanErrorInfo():
    api_mod.cleanErrorInfo.restype = c_int
    ret = api_mod.cleanErrorInfo()
    return message(ret)
    
def setCollisionLevel(level):
    api_mod.setCollisionLevel.argtypes = [c_int]
    api_mod.setCollisionLevel.restype = c_int
    ret = api_mod.setCollisionLevel(level)
    return message(ret)
